2008-10-22 [michael]	0.6.2cvs8

	* src/archiver_gtk.c
	* src/libarchive_archive.c
	* src/libarchive_archive.h
        fixed a bug concerning the open function with option O_CREAT.
        Found by Brian Morrison.
        Using folder_item_remove_msgs to increase the speed for deleting
        messages considerably. Thanks to Colin Leroy for adding my
        attention to this trick.
        Removed some old uncommentted code.

2008-10-21 [michael]	0.6.2cvs7

	* src/archiver_gtk.c
        Freezing summaryview while deleting messages. Improves the
        speed of the process considerably.

2008-10-20 [michael]	0.6.2cvs6

	* src/libarchive_archive.c
        removed an unused assert which could cause a potential bug

2008-10-20 [michael]	0.6.2cvs5

	* src/archiver_gtk.c
        Adding required mode_t variable to the open
        command in function file_is_writeable

2008-10-20 [michael]	0.6.2cvs4

	* src/libarchive_archive.c
        Fix bug where claws-mail crashes if incorrect date
        is entered.

2008-10-19 [michael]	0.6.2cvs3

	* src/archiver_gtk.c
        Added a test to prevent crash if archive file cannot
        be created.

2008-10-18 [michael]	0.6.2cvs2

	* src/libarchive_archive.c
        Fixing a possible memory leak.

2008-10-17 [michael]	0.6.2cvs1

	* configure.ac
	* po/ca.po
	* po/es.po
	* po/fr.po
	* po/hu.po
	* po/pt_BR.po
	* src/archiver.h
	* src/archiver_gtk.c
	* src/archiver_prefs.c
	* src/archiver_prefs.h
	* src/libarchive_archive.c
	* src/libarchive_archive.h

        Fix a bug which was causing files not to be included in archive.
        The reason was if the user had chosen to use descriptive names
        for files in archive and if a descriptive name was not able to be
        constructed then the file was silently dropped from archive.
        Add a fall-back to simply use the mail number instead which will
        then reinstate the message in archive again.

        Added to new features: