@@ -36,3 +36,4 @@
 ( cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/libarchive_archive.c;  ) > 0.6.2cvs6.patchset
 ( cvs diff -u -r 1.1.2.20 -r 1.1.2.21 src/archiver_gtk.c;  ) > 0.6.2cvs7.patchset
 ( cvs diff -u -r 1.1.2.21 -r 1.1.2.22 src/archiver_gtk.c;  cvs diff -u -r 1.1.2.11 -r 1.1.2.12 src/libarchive_archive.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/libarchive_archive.h;  ) > 0.6.2cvs8.patchset
+( cvs diff -u -r 1.1.2.12 -r 1.1.2.13 src/libarchive_archive.c;  ) > 0.6.2cvs9.patchset
